--- a/views/index.njk
+++ b/views/index.njk
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.njk" %}
 
 {% block name %}
 {% endblock name %}
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="content">
-        <img class="foto" src="assets/104169738_687672685112542_1468337677738709328_n.png" alt="logo">
+        <img class="foto" src="https://bityli.com/X0UhH" alt="logo">
         <h1>Rocketseat</h1>
         <h2>A menor distância entre você e seus objetivos!</h2>
         <p>Somos especializados em cursos de programação e nosso método está fundamentado 
