--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,7 +18,7 @@
 
     <header>
         <a href="/" class="logo">
-            <img src="/assets/104169738_687672685112542_1468337677738709328_n.png" alt="">
+            <img src="https://bityli.com/X0UhH" alt="">
         </a>
         <nav>
             <ul class="menu">
