--- a/views/index.njk
+++ b/views/index.njk
@@ -6,21 +6,11 @@
 {% block content %}
 
     <div class="content">
-        <img class="foto" src="https://bityli.com/X0UhH" alt="logo">
-        <h1>Rocketseat</h1>
-        <h2>A menor distância entre você e seus objetivos!</h2>
-        <p>Somos especializados em cursos de programação e nosso método está fundamentado 
-        nos pilares: <strong>Foco</strong>, <strong>Prática</strong> e <strong>Grupo</strong>.</p>
-
-
-        <ul> As principais tecnologias abordadas:
-            <li> Javascript, </li>
-            <li> CSS, </li>
-            <li> HTML, </li>
-            <li> React, </li>
-            <li> React Native. </li>
-        </ul>
-
+        <img class="foto" src="{{data.avatar_url}}" alt="logo">
+        <h1>{{data.title}}</h1>
+        <h2>{{data.subtitle}}</h2>
+        <p>{{data.moto}}</p>
+        <ul>{{data.techs}}</ul>
     </div>
 
 {% endblock content %}
